--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           github_user_name: ANANDKUMAR0911
           outputs: |
-            dist/neon-snake.svg?palette=neon
-            dist/neon-snake-dark.svg?palette=neon-dark
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3
